--- a/views/admin/candidates.ejs
+++ b/views/admin/candidates.ejs
@@ -194,16 +194,16 @@
                   <br />
                   <div class="candidate">
                     <% if (president._id) { %>
-                    <div class="candidate-content">
+                    <!-- <div class="candidate-content"> -->
                       <div class="img-container">
                         <img src="<%= president.image %>" alt="<%= president.name %>" />
                       </div>
 
-                      <div>
+                      <div class="candidate-info">
                         <h2><%= president.name %></h2>
                         <p>Party: <%= president.party %></p>
                       </div>
-                    </div>
+                    <!-- </div> -->
 
                     <button class="button button-edit" onclick="editCandidate('<%= president._id %>', '<%= president.position %>', '<%= president.party %>', '<%= president.name %>', '<%= president.moreInfo %>', '<%= president.image %>')">Edit</button>
                     <% } else { %>
@@ -225,16 +225,16 @@
                   <br />
                   <div class="candidate">
                     <% if (vice_president._id) { %>
-                    <div class="candidate-content">
+                  
                       <div class="img-container">
                         <img src="<%= vice_president.image %>" alt="<%= vice_president.name %>" />
                       </div>
 
-                      <div>
+                      <div class="candidate-info">
                         <h2><%= vice_president.name %></h2>
                         <p>Party: <%= vice_president.party %></p>
                       </div>
-                    </div>
+                   
 
                     <button class="button button-edit" onclick="editCandidate('<%= vice_president._id %>', '<%= vice_president.position %>', '<%= vice_president.party %>', '<%= vice_president.name %>', '<%= vice_president.moreInfo %>', '<%= vice_president.image %>')">Edit</button>
                     <% } else { %>
@@ -256,16 +256,16 @@
                   <br />
                   <div class="candidate">
                     <% if (senator._id) { %>
-                    <div class="candidate-content">
+                    
                       <div class="img-container">
                         <img src="<%= senator.image %>" alt="<%= senator.name %>" />
                       </div>
 
-                      <div>
+                      <div class="candidate-info">
                         <h2><%= senator.name %></h2>
                         <p>Party: <%= senator.party %></p>
                       </div>
-                    </div>
+                    
 
                     <button class="button button-edit" onclick="editCandidate('<%= senator._id %>', '<%= senator.position %>', '<%= senator.party %>', '<%= senator.name %>', '<%= senator.moreInfo %>', '<%= senator.image %>')">Edit</button>
                     <% } else { %>
@@ -312,15 +312,15 @@
                     <br />
                     <div class="candidate">
                       <% if (candidate._id) { %>
-                      <div class="candidate-content">
+                      
                         <div class="img-container">
                           <img src="<%= candidate.image %>" alt="<%= candidate.name %>" />
                         </div>
-                        <div>
+                        <div class="candidate-info">
                           <h2><%= candidate.name %></h2>
                           <p>Party: <%= candidate.party %></p>
                         </div>
-                      </div>
+                      
 
                       <button
                         class="button button-edit"
@@ -346,9 +346,13 @@
 
                   <% candidates_lsc.forEach(college => { %> <% if (college.collegeAcronym === "CAFA") { %> <% if (college.positions["Vice Governor"]) { %> <% college.positions["Vice Governor"].forEach(candidate => { %>
                   <div class="candidate">
+                  
                     <img src="<%= candidate.image %>" alt="<%= candidate.name %>" />
+                   
+                   
                     <h3><%= candidate.name %></h3>
                     <p>Party: <%= candidate.party %></p>
+                    
                     <p><%= candidate.moreInfo %></p>
                     <button
                       class="button button-edit"
