fixed candidate designs

--- a/views/admin/system-manage-admins.ejs
+++ b/views/admin/system-manage-admins.ejs
@@ -95,10 +95,10 @@
                   <td><%= admin.name %></td>
                   <td><%= admin.role %></td>
                   <td><%= admin.email %></td>
-                  <td>
+                  <td class="pass">
                     <span class="password-mask">********</span>
                     <button type="button" onclick="togglePassword(this)" data-password="<%= admin.password %>">
-                      <i class="fa-solid fa-magnifying-glass"></i> show
+                       Show
                     </button>
                   </td>
                   <!-- <td>
