--- a/views/admin/candidates.ejs
+++ b/views/admin/candidates.ejs
@@ -123,15 +123,15 @@
         function createCandidateCard(candidate, collegeAcronym) {
           return `
             <div class="candidate">
-              <div class="candidate-content">
+              
                 <div class="img-container">
                   <img src="${candidate.image}" alt="${candidate.name}">
                 </div>
-                <div>
+                <div class="candidate-info">
                   <h2>${candidate.name}</h2>
                   <p>Party: ${candidate.party}</p>
                 </div>
-              </div>
+             
               <button class="button button-edit"
                 onclick="editCandidateLSC('${candidate._id}', '${candidate.position}', '${candidate.party}', '${candidate.name}', '${candidate.moreInfo}', '${candidate.image}', '${collegeAcronym}')">
                 Edit
@@ -144,15 +144,15 @@
         function createBoardMemberCard(candidate, collegeAcronym) {
           return `
             <div class="candidate">
-              <div class="candidate-content">
+             
                 <div class="img-container">
                   <img src="${candidate.image}" alt="${candidate.name}">
                 </div>
-                <div>
+                <div class="candidate-info">
                   <h2>${candidate.name}</h2>
                   <p>Party: ${candidate.party}</p>
                 </div>
-              </div>
+          
               <button class="button button-edit"
                 onclick="editCandidateLSC('${candidate._id}', '${candidate.position}', '${candidate.party}', '${candidate.name}', '${candidate.moreInfo}', '${candidate.image}', '${collegeAcronym}', '${candidate.program}')">
                 Edit
@@ -174,13 +174,7 @@
             <i class="fa fa-users"></i>
             <h1 class="title">Candidate Management</h1>
           </div>
-          <h3>
-            <span class="purple">Blockchain Deployment Status:</span>
-            <span class="smart-contract-status">
-              <%= electionConfig.candidatesSubmitted ? "Submitted" : "Not Submitted" %>
-            </span>
-          </h3>
-          
+          <h3><span class="purple">Candidate Submission on Blockchain:</span> <span class="smart-contract-status">Not Submitted  |  Submitted</span></h3>
         </div>
         <hr class="title-line" />
 
