--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -48,7 +48,7 @@
               <i class="fa-regular fa-address-card"></i>
               <p>Voter Information</p>
               <div class="view-export">
-                <a href="voter_information.html">View</a>
+                <a href="/voter-info">View</a>
                 <span class="separator">|</span>
                 <a href="export-voter-info">Export</a>
               </div>
@@ -58,7 +58,7 @@
              <i class="fa fa-bar-chart" aria-hidden="true"></i>
               <p>Election Results</p>
               <div class="view-export">
-                <a href="results.html">View</a>
+                <a href="/results">View</a>
                 <span class="separator">|</span>
                 <a href="export-election-results">Export</a>
               </div>
@@ -68,7 +68,7 @@
               <i class="fas fa-list-ol"></i>
               <p>Vote Tally</p>
               <div class="view-export">
-                <a href="candidates">View</a>
+                <a href="/vote-tally">View</a>
                 <span class="separator">|</span>
                 <a href="export-candidates">Export</a>
               </div>
@@ -79,7 +79,7 @@
              <i class="fa fa-users"></i>
               <p>Candidates</p>
               <div class="view-export">
-                <a href="candidates">View</a>
+                <a href="/candidates">View</a>
                 <span class="separator">|</span>
                 <a href="export-candidates">Export</a>
               </div>
@@ -89,7 +89,7 @@
               <i class="fa-solid fa-user-tie"></i>
               <p>Admin Accounts</p>
               <div class="view-export">
-                <a href="manage-accounts.html">View</a>
+                <a href="/manage-admins">View</a>
                 <span class="separator">|</span>
                 <a href="export-admin-accounts">Export</a>
               </div>
