latest for demo video

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -342,7 +342,7 @@
                    
                     <p class="center big orange bold"><%= voterTurnoutPercentage.toFixed(2) %>%</p>
                    
-                    <p class="center"><%= electionConfig.totalVoted %> voted students out of <%= electionConfig.totalNumberOfStudents %> total students</p>
+                    <p class="center"><%= electionConfig.totalRegisteredVoted %> voted students out of <%= electionConfig.totalNumberOfStudents %> total students</p>
                   </div>
                 </div>
               
