--- a/views/admin/candidates.ejs
+++ b/views/admin/candidates.ejs
@@ -665,7 +665,7 @@
           <br />
           <br />
           <div class="right">
-            <button class="button beside-button-left" id="button-delete-edit-lsc" onclick="deleteCandidateLSC()">Delete</button>
+            <button type="button" class="button beside-button-left" id="button-delete-edit-lsc" onclick="deleteCandidateLSC()">Delete</button>
             <input type="submit" class="button button-save" value="Save" />
           </div>
         </form>
@@ -767,7 +767,7 @@
           <br />
           <br />
           <div class="right">
-            <button class="button beside-button-left" id="button-delete" onclick="deleteCandidate()">Delete</button>
+            <button type="button" class="button beside-button-left" id="button-delete" onclick="deleteCandidate()">Delete</button>
             <input type="submit" class="button button-save" value="Save" />
           </div>
         </form>
