workaround for pie chart labels

--- a/views/admin/shared-voter-turnout.ejs
+++ b/views/admin/shared-voter-turnout.ejs
@@ -1,3 +1,5 @@
+
+
 <div class="first-main">
   <div class="main-content">
     <br />
@@ -14,6 +16,7 @@
             <span></span>
           </div>
         </div>
+        <h3 style="text-align: center;"><%= electionConfig.totalRegisteredVoted %> students have voted out of <%= electionConfig.totalNumberOfStudents %> students.</h3>
         <br />
         <div class="content-colleges"></div>
       </div>
@@ -129,4 +132,6 @@
       });
     });
   </script>
+
+  
 </div>
